data/derived/comb/progs/unify/prog3121.ml.out
Characters 29-40:
  wwhile (notequals b,b);;
          ^^^^^^^^^^^
Error: This expression has type 'a -> bool
       but an expression was expected of type 'a -> 'a * bool
       Type bool is not compatible with type 'a * bool 
